# tailortalk2

./: .gitignore  CAL.PY  ai_integration.py  calendar_setup.py  main.py  pyproject.toml  streamlit_app.py  token.json  token.pkl
.devcontainer/: devcontainer.json
ai_agent/: ai_integration.py  calendar_setup.py  events.py  fetch_calendar.py  intent_detect.py  token.pkl
streamlit/: chatbot.py
streamlit/pages/: calendar.py
